src/objects/External_Idea_Submission__c.object
<CustomObject>
    <fields>
        <fullName>Address_1__c</fullName>
        <label>Address 1</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_2__c</fullName>
        <label>Address 2</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_if_any__c</fullName>
        <label>Company (if any)</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Idea_Status__c</fullName>
        <label>Idea Status</label>
        <picklist>
            <picklistValues>
                <fullName>Submitted</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pursued</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Salutation__c</fullName>
        <label>Salutation</label>
        <picklist>
            <picklistValues>
                <fullName>Mr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mrs.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ms.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dr.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unsolicited_Idea_Details__c</fullName>
        <label>Unsolicited Idea Details</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Unsolicited_Idea_Name__c</fullName>
        <label>Unsolicited Idea Name</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <label>External Idea Submission</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Unsolicited_Idea_Name__c</columns>
        <columns>Idea_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Email__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Status_Pursued</fullName>
        <columns>NAME</columns>
        <columns>Idea_Status__c</columns>
        <columns>Email__c</columns>
        <columns>Unsolicited_Idea_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Idea_Status__c</field>
            <operation>equals</operation>
            <value>Pursued</value>
        </filters>
        <label>Status: Pursued</label>
    </listViews>
    <listViews>
        <fullName>Status_Rejected</fullName>
        <columns>NAME</columns>
        <columns>Idea_Status__c</columns>
        <columns>Email__c</columns>
        <columns>Unsolicited_Idea_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Idea_Status__c</field>
            <operation>equals</operation>
            <value>Rejected</value>
        </filters>
        <label>Status: Rejected</label>
    </listViews>
    <listViews>
        <fullName>Status_Submitted</fullName>
        <columns>NAME</columns>
        <columns>Idea_Status__c</columns>
        <columns>Email__c</columns>
        <columns>Unsolicited_Idea_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Unsolicited_Idea_Details__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Idea_Status__c</field>
            <operation>equals</operation>
            <value>Submitted</value>
        </filters>
        <label>Status: Submitted</label>
    </listViews>
    <listViews>
        <fullName>april_2013</fullName>
        <columns>NAME</columns>
        <columns>Unsolicited_Idea_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Email__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>4/1/2013 12:00 AM</value>
        </filters>
        <label>April 2013 to NOW</label>
    </listViews>
    <nameField>
        <displayFormat>EIS-{00000000}</displayFormat>
        <label>Idea Submission Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>External Idea Submissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>